; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb_mempack.c_impl__free.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb_mempack.c_impl__free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memory_packer_db = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @impl__free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @impl__free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.memory_packer_db*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.memory_packer_db*
  store %struct.memory_packer_db* %5, %struct.memory_packer_db** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @git_mempack_reset(i32* %6)
  %8 = load %struct.memory_packer_db*, %struct.memory_packer_db** %3, align 8
  %9 = getelementptr inbounds %struct.memory_packer_db, %struct.memory_packer_db* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @git_oidmap_free(i32 %10)
  %12 = load %struct.memory_packer_db*, %struct.memory_packer_db** %3, align 8
  %13 = call i32 @git__free(%struct.memory_packer_db* %12)
  ret void
}

declare dso_local i32 @git_mempack_reset(i32*) #1

declare dso_local i32 @git_oidmap_free(i32) #1

declare dso_local i32 @git__free(%struct.memory_packer_db*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
